--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "avsc": "^5.7.4",
     "bson": "^4.6.3",
     "buffer": "^6.0.3",
+    "capnp-js": "^0.2.11",
+    "capnp-ts": "^0.7.0",
     "cbor-x": "^1.2.1",
     "esbuild": "^0.14.38",
     "events": "^3.3.0",
