--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "build-test5-protobuf-compiled": "yarn pbjs -t static-module -w commonjs -o test5/test5-protobuf-compiled-proto.js test5/test5.proto && esbuild test5/test5-protobuf-compiled.js --bundle --outfile=test5/test5-protobuf-compiled.bundle.js --target=\"chrome100,firefox99\" --minify",
     "build-test5-flatbuffers": "flatc -o test5/test5-flatbuffers-compiled-proto/ --ts test5/test5.fbs",
     "build-test5-flatbuffers-compiled": "yarn tsc ./test5/test5-flatbuffers-compiled-proto/testpackage/timeframe-data.ts --target es6 --moduleResolution node",
+    "build-test5-thrift": "yarn thrift-typescript --outDir ./test5/test5-thrift-compiled-proto --rootDir . --sourceDir . test5/test5.thrift",
+    "build-test5-thrift-compiled": "yarn tsc ./test5/test5-thrift-compiled-proto/index.ts --target es6 --moduleResolution node",
     "build-test5-unified": "esbuild test5/index.js --bundle --outfile=test5/index.bundle.js --target=\"chrome100,firefox99\" --define:process.env={} --inject:test5/buffer-shim.js",
-    "build-test5": "yarn build-test5-avro && yarn build-test5-bson && yarn build-test5-cbor && yarn build-test5-messagepack && yarn build-test5-protobuf && yarn build-test5-protobuf-compiled && yarn build-test5-flatbuffers-compiled && yarn build-test5-unified"
+    "build-test5": "yarn build-test5-avro && yarn build-test5-bson && yarn build-test5-cbor && yarn build-test5-messagepack && yarn build-test5-protobuf && yarn build-test5-protobuf-compiled && yarn build-test5-flatbuffers-compiled && yarn build-test5-thrift && yarn build-test5-thrift-compiled && yarn build-test5-unified"
   },
   "dependencies": {
+    "@creditkarma/thrift-typescript": "^3.7.6",
     "@protobufjs/base64": "^1.1.2",
     "@protobufjs/utf8": "^1.1.0",
     "avsc": "^5.7.4",
@@ -32,6 +35,7 @@
     "path": "^0.12.7",
     "protobufjs": "^6.11.2",
     "stream": "^0.0.2",
+    "thrift": "^0.16.0",
     "thriftrw": "^3.12.0",
     "typescript": "^4.6.4",
     "util": "^0.12.4"
